--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "cookies": "^0.9.1",
+    "firebase": "^10.12.4",
+    "firebase-admin": "^12.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cookies": "^0.9.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
