--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "^12.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "nookies": "^2.5.2",
     "react": "^18",
